test(interop): execute the cells the harness was skipping, and widen the matrix
The JVM leg classified outbound `signed` and `anoncrypt(sign)` as not-applicable
and never ran them, so the nightly exited zero while didcomm-jvm could not
verify a single signed envelope we produced. An implementation bug of ours was
wearing a label that means "the counterpart lacks this feature". Every one of
those cells is now executed, and the three defects hiding behind them are fixed
(see the preceding commits and dataproofs-dotnet#17/#25).

The matrix went from nine direct, single-recipient, did:peer/X25519/EdDSA cells
to twenty in both directions, adding P-256 key agreement, ES256 and ES256K
signing, did:key, three-recipient with mixed key types, and one- and two-mediator
forward routing exercised as a real onion in both directions. Against
didcomm-python 0.3.2 the leg now runs 55 cells green.

FR-IX-06 previously self-unpacked the published vectors with didcomm-dotnet,
which proves nothing about interoperability. Both legs now hand the published
set to the counterpart libraries: 16 of 16 verify under didcomm-python, up from
12 of 16 before the kid placement was settled.

The driver's Flattened-to-General re-serialization shim is deleted. It fired
zero times on a full run, and with General now emitted everywhere a surviving
shim would silently absorb a regression to Flattened and report a green cell
for an envelope the counterpart could not actually read.

Two n/a entries remain and both name a falsifiable cause. didcomm-jvm cannot do
secp256k1 at all, because JDK 16 removed it from SunEC and didcomm-jvm 0.3.2
ships no BouncyCastle; nimbus swallows the resulting SignatureException and
reports a valid ES256K signature as invalid, which is indistinguishable from
tampering. Inbound ES256K from didcomm-python fails because we are the strict
side: it emits RFC 8812-valid high-S signatures and our verifier inherits
libsecp256k1's low-S policy through NBitcoin.Secp256k1, filed as
crypto